--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -11,6 +11,7 @@
     "test:watch": "vitest"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "2.1.16",
     "@radix-ui/react-slot": "1.2.3",
     "@tailwindcss/postcss": "4.1.17",
     "@tanstack/react-virtual": "3.11.1",
@@ -18,6 +19,7 @@
     "clsx": "2.1.1",
     "lucide-react": "0.513.0",
     "next": "16.0.7",
+    "next-intl": "4.5.8",
     "next-themes": "0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
