--- a/tests/integration/repos.yaml
+++ b/tests/integration/repos.yaml
@@ -1,4 +1,9 @@
 repositories:
+  - name: requests
+    url: https://github.com/psf/requests
+    ref: v2.32.3
+    framework: pytest
+
   - name: testing-library-react
     url: https://github.com/testing-library/react-testing-library
     ref: v16.1.0
