feat: add Java language and JUnit 5 test framework support
Implement Java language infrastructure and JUnit 5 framework parsing

- Add tree-sitter Java parser pool
- Detect JUnit 5 annotations: @Test, @ParameterizedTest, @RepeatedTest, @Nested, @Disabled, @DisplayName
- Extract AST traversal logic into shared javaast utility package
- Normalize scoped annotations (@org.junit.jupiter.api.Test → Test)
- Add integration test repositories: junit5-samples, testcontainers-java, commons-lang

--- a/tests/integration/repos.yaml
+++ b/tests/integration/repos.yaml
@@ -91,3 +91,19 @@ repositories:
     ref: v3.5.17
     framework: go-testing
     complex: true
+
+  - name: junit5-samples
+    url: https://github.com/junit-team/junit5-samples
+    ref: main
+    framework: junit5
+
+  - name: testcontainers-java
+    url: https://github.com/testcontainers/testcontainers-java
+    ref: 1.20.4
+    framework: junit5
+    complex: true
+
+  - name: commons-lang
+    url: https://github.com/apache/commons-lang
+    ref: rel/commons-lang-3.17.0
+    framework: junit5
