feat: add C# language and xUnit test framework support
Implement complete support for C# test file parsing:
- Add LanguageCSharp constant and tree-sitter C# parser pool
- Support [Fact], [Theory], Skip, DisplayName attribute parsing
- Provide C# AST utilities via dotnetast package (follows javaast pattern)
- Support global using, using static syntax
- Support nested classes (depth limit 20)
- Integration test with fluentassertions repo (326 files, 4863 tests verified)

--- a/tests/integration/repos.yaml
+++ b/tests/integration/repos.yaml
@@ -107,3 +107,8 @@ repositories:
     url: https://github.com/apache/commons-lang
     ref: rel/commons-lang-3.17.0
     framework: junit5
+
+  - name: fluentassertions
+    url: https://github.com/fluentassertions/fluentassertions
+    ref: 8.3.0
+    framework: xunit
