--- a/tests/integration/repos.yaml
+++ b/tests/integration/repos.yaml
@@ -112,3 +112,8 @@ repositories:
     url: https://github.com/fluentassertions/fluentassertions
     ref: 8.3.0
     framework: xunit
+
+  - name: nunit
+    url: https://github.com/nunit/nunit
+    ref: 4.3.2
+    framework: nunit
