feat: add Ruby language and RSpec test framework support
Implement Ruby language infrastructure and RSpec test framework parser
- Add LanguageRuby constant and tree-sitter parser pool
- RSpec Definition (describe, context, it, specify, example support)
- Skip handling: xit, xdescribe, xcontext, skip, pending
- Ruby require statement extractor (import-based detection)
- Integration test: rspec-core v3.13.2 (89 files, 1620 tests)

--- a/tests/integration/repos.yaml
+++ b/tests/integration/repos.yaml
@@ -117,3 +117,8 @@ repositories:
     url: https://github.com/nunit/nunit
     ref: 4.3.2
     framework: nunit
+
+  - name: rspec-core
+    url: https://github.com/rspec/rspec-core
+    ref: v3.13.2
+    framework: rspec
