--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-dropdown-menu": "2.1.16",
     "@radix-ui/react-slot": "1.2.3",
     "@tailwindcss/postcss": "4.1.17",
+    "@tanstack/react-query": "5.62.16",
     "@tanstack/react-virtual": "3.11.1",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
