--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -37,6 +37,7 @@
     "@types/react-dom": "19.1.6",
     "@vitejs/plugin-react": "4.5.2",
     "jsdom": "26.1.0",
+    "openapi-typescript": "7.6.1",
     "typescript": "5.8.3",
     "vitest": "3.2.4"
   }
