feat(parser): add Rust cargo test framework support
Add test file detection and parsing for Rust projects

Main changes:
- Add LanguageRust constant and tree-sitter parser pool
- CargoTestParser: parse #[test], #[ignore], #[should_panic] attributes
- CargoTestFileMatcher: match *_test.rs, tests/*.rs patterns
- CargoTestContentMatcher: detect #[test], #[cfg(test)] content patterns
- Support #[cfg(test)] mod tests {} module structure

Verified with ripgrep repository: 47 files, 427 tests detected

--- a/tests/integration/repos.yaml
+++ b/tests/integration/repos.yaml
@@ -122,3 +122,8 @@ repositories:
     url: https://github.com/rspec/rspec-core
     ref: v3.13.2
     framework: rspec
+
+  - name: ripgrep
+    url: https://github.com/BurntSushi/ripgrep
+    ref: 14.1.1
+    framework: cargo-test
