--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -14,6 +14,7 @@
     "wayou.vscode-todo-highlight",
     "usernamehw.errorlens",
     "kubrickcode.quick-command-buttons",
+    "intellsmi.comment-translate",
     "hashicorp.hcl"
   ]
 }
