feat: add local development mode support to justfile
Add justfile recipes for independent collector execution
- run --local: connect to local services via LOCAL_* env vars
- migrate-local: apply schema.sql to local-postgres
- enqueue: placeholder (to be implemented in Commit 3)

fix #14

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -146,12 +146,26 @@
     },
     {
       "color": "#2196F3",
-      "command": "just run",
-      "insertOnly": false,
       "name": "$(play-circle) Run",
       "shortcut": "r",
-      "terminalName": "run collector",
-      "useVsCodeApi": false
+      "group": [
+        {
+          "color": "",
+          "command": "just run local",
+          "name": "local",
+          "shortcut": "l",
+          "terminalName": "run local",
+          "useVsCodeApi": false
+        },
+        {
+          "color": "",
+          "command": "just run integration",
+          "name": "integration",
+          "shortcut": "i",
+          "terminalName": "run integration",
+          "useVsCodeApi": false
+        }
+      ]
     },
     {
       "color": "blue",
