feat(gtest): add C++ Google Test framework support
Add Google Test framework support for C++ test file parsing

- Parse TEST(), TEST_F(), TEST_P() macros
- Detect disabled tests/suites via DISABLED_ prefix
- Integrate C++ tree-sitter parser (LanguageCpp)
- Recognize *_test.cc, *_unittest.cpp file patterns

--- a/tests/integration/repos.yaml
+++ b/tests/integration/repos.yaml
@@ -127,3 +127,8 @@ repositories:
     url: https://github.com/BurntSushi/ripgrep
     ref: 14.1.1
     framework: cargo-test
+
+  - name: googletest
+    url: https://github.com/google/googletest
+    ref: v1.15.2
+    framework: gtest
