feat(kotest): add Kotlin Kotest test framework support
Add Kotlin Kotest test framework detection and parsing

- Support FunSpec, StringSpec, BehaviorSpec, DescribeSpec, AnnotationSpec DSL styles
- Integrate tree-sitter Kotlin parser pool
- Verify with kotest/kotest v6.0.7 integration test (1721 files, 1805 tests discovered)

--- a/tests/integration/repos.yaml
+++ b/tests/integration/repos.yaml
@@ -150,3 +150,9 @@ repositories:
     ref: v11.7.5
     framework: mocha
     complex: true
+
+  - name: kotest
+    url: https://github.com/kotest/kotest
+    ref: v6.0.7
+    framework: kotest
+    complex: true
