feat(xctest): add Swift XCTest test framework support
Add parsing support for XCTest framework in iOS/macOS projects

- Add LanguageSwift constant and tree-sitter Swift parser integration
- Detect XCTestCase and *TestCase pattern inheritance
- Handle func test* methods, XCTSkip, async functions
- Add Swift import extraction and file detection logic
- Integration test with Alamofire 5.10.2 (32 files, 803 tests)

--- a/tests/integration/repos.yaml
+++ b/tests/integration/repos.yaml
@@ -173,3 +173,8 @@ repositories:
     ref: v4.0.2
     framework: mstest
     complex: true
+
+  - name: alamofire
+    url: https://github.com/Alamofire/Alamofire
+    ref: 5.10.2
+    framework: xctest
