feat(cypress): add Cypress E2E testing framework support
Add Cypress E2E testing framework support

- CypressFilenameMatcher: detect .cy.{js,ts,jsx,tsx} patterns
- CypressContentMatcher: detect cy.*, Cypress.* API patterns
- CypressConfigParser: parse cypress.config.* config files
- Reuse shared/jstest for describe/it syntax parsing

Integration test: 1271 files, 3699 tests detected from cypress-io/cypress repo

--- a/tests/integration/repos.yaml
+++ b/tests/integration/repos.yaml
@@ -138,3 +138,9 @@ repositories:
     ref: v11.37.0
     framework: phpunit
     complex: true
+
+  - name: cypress
+    url: https://github.com/cypress-io/cypress
+    ref: v13.17.0
+    framework: cypress
+    complex: true
