chore: add Redis reset capability to reset command
- Extend just reset command with case statement for target-specific reset
  - all: reset both DB and Redis (default)
  - db: drop PostgreSQL schema and apply migrations
  - redis: execute Redis FLUSHALL
- Add redis-tools package installation to devcontainer

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -98,10 +98,26 @@
         },
         {
           "color": "",
-          "command": "just reset",
-          "name": "reset",
+          "command": "just reset all",
+          "name": "reset all",
           "shortcut": "r",
+          "terminalName": "reset all",
+          "useVsCodeApi": false
+        },
+        {
+          "color": "",
+          "command": "just reset db",
+          "name": "reset db",
+          "shortcut": "d",
           "terminalName": "reset db",
+          "useVsCodeApi": false
+        },
+        {
+          "color": "",
+          "command": "just reset redis",
+          "name": "reset redis",
+          "shortcut": "s",
+          "terminalName": "reset redis",
           "useVsCodeApi": false
         }
       ]
