chore: Global document synchronization
- global document synchronization within a .github repository
- added a document synchronization command

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -87,6 +87,14 @@
           "shortcut": "s",
           "terminalName": "snapshot-update",
           "useVsCodeApi": false
+        },
+        {
+          "color": "",
+          "command": "just sync-docs",
+          "name": "sync-docs",
+          "shortcut": "y",
+          "terminalName": "sync-docs",
+          "useVsCodeApi": false
         }
       ]
     },
