chore: modified container structure to support codespaces
- codespaces do not have a local environment, so .env.secrets cannot be injected, so a fallback file has been created.
- local environments can use the same functionality as before, while codespaces utilize GitHub Secrets.
- changed the way cloud code sessions are maintained from volume mounts to root-path mounts.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,7 @@
 {
   "name": "specvital-infra",
   "dockerComposeFile": "docker-compose.yml",
+  "initializeCommand": "touch ${HOME}/.env.secrets",
   "service": "workspace",
   "workspaceFolder": "/workspaces/specvital-infra",
   "features": {
