--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - ..:/workspaces/specvital-infra:delegated
       - /var/run/docker.sock:/var/run/docker.sock
       - ${HOME}/.env.secrets:/root/.env.secrets:ro
-      - claude-sessions:/root/.claude
+      - ../.claude-sessions:/root/.claude
     env_file:
       - ${HOME}/.env.secrets
     environment:
@@ -47,5 +47,4 @@ networks:
     driver: bridge
 
 volumes:
-  claude-sessions:
   specvital-postgres-data:
