--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "2.1.16",
     "@radix-ui/react-slot": "1.2.3",
+    "@radix-ui/react-tooltip": "1.2.8",
     "@tailwindcss/postcss": "4.1.17",
     "@tanstack/react-query": "5.62.16",
     "@tanstack/react-virtual": "3.11.1",
