--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-virtual": "3.11.1",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
+    "es-toolkit": "1.43.0",
     "lucide-react": "0.513.0",
     "next": "16.0.7",
     "next-intl": "4.5.8",
