--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,13 @@
     "ghcr.io/devcontainers/features/github-cli:1": {},
     "ghcr.io/guiyomh/features/just:0": {},
     "./local-features/go": {},
-    "./local-features/node": {}
+    "./local-features/node": {},
+    "ghcr.io/devcontainers/features/python:1": {},
+    "ghcr.io/devcontainers/features/java:1": {},
+    "ghcr.io/devcontainers/features/ruby:1": {},
+    "ghcr.io/devcontainers/features/php:1": {},
+    "ghcr.io/devcontainers/features/rust:1": {},
+    "ghcr.io/devcontainers/features/dotnet:2": {}
   },
   "postCreateCommand": "bash /workspaces/specvital-core/.devcontainer/post-create.sh",
   "customizations": {
