fix(jstest): support dynamic test detection in forEach/map callbacks and object arrays
Realworld validation revealed parser failing to detect test definitions inside forEach/map callbacks and it.each([{...}]) patterns entirely (0 tests).

- forEach/map callbacks: ParseNode only processed direct children of expression_statement, missing iterator callback traversal
- Object arrays: ExtractArrayElements didn't handle object type, returning empty slice

Added callback body parsing after forEach/map detection with `(dynamic cases)` suffix.
Object types return placeholder to create 1 test per element.

fix #48

--- a/tests/integration/repos.yaml
+++ b/tests/integration/repos.yaml
@@ -250,3 +250,11 @@ repositories:
       - playwright
       - vitest
     complex: true
+
+  - name: github-project-status-viewer
+    url: https://github.com/KubrickCode/github-project-status-viewer
+    ref: main
+    frameworks:
+      - go-testing
+      - vitest
+    complex: true
