fix(playwright): detect indirect imports and test.extend() patterns
84% of test files were missing when validating against microsoft/playwright repo.
- Indirect import: `import { test as it } from './pageTest'` not detected
- test.extend(): `const it = test.extend<Fixtures>({...})` not detected
- config testDir: `path.join(__dirname, '..')` parsing failed, scope not applied

Added 'it' alias fallback when no direct @playwright/test import exists,
and detect test.extend() calls in variable declarations.
Added testDir extraction to config parsing for proper scope resolution.

Validation results:
- playwright: 345→473 files, 2207→5312 tests
- grafana: 6 playwright files newly detected
- trpc: correct reclassification playwright→vitest (11→9)

fix #54

--- a/tests/integration/repos.yaml
+++ b/tests/integration/repos.yaml
@@ -108,6 +108,7 @@ repositories:
       - cypress
       - go-testing
       - jest
+      - playwright
     complex: true
     nondeterministic: true
 
