--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "2.1.16",
+    "@radix-ui/react-scroll-area": "1.2.10",
     "@radix-ui/react-slot": "1.2.3",
     "@radix-ui/react-tooltip": "1.2.8",
     "@tailwindcss/postcss": "4.1.17",
