--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-dropdown-menu": "2.1.16",
     "@radix-ui/react-scroll-area": "1.2.10",
     "@radix-ui/react-slot": "1.2.3",
+    "@radix-ui/react-tabs": "1.1.13",
     "@radix-ui/react-tooltip": "1.2.8",
     "@tailwindcss/postcss": "4.1.17",
     "@tanstack/react-query": "5.62.16",
@@ -26,6 +27,7 @@
     "next": "16.0.7",
     "next-intl": "4.5.8",
     "next-themes": "0.4.6",
+    "nuqs": "2.8.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "sonner": "2.0.7",
