--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,6 +6,7 @@
   "workspaceFolder": "/workspaces/specvital-github-io",
   "features": {
     "ghcr.io/guiyomh/features/just:0": {},
+    "ghcr.io/devcontainers/features/github-cli:1": {},
     "./local-features/node": {}
   },
   "postCreateCommand": "bash /workspaces/specvital-github-io/.devcontainer/post-create.sh",
