--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -29,6 +29,7 @@
     "cmdk": "1.1.1",
     "es-toolkit": "1.43.0",
     "lucide-react": "0.513.0",
+    "motion": "12.23.26",
     "next": "16.0.7",
     "next-intl": "4.5.8",
     "next-themes": "0.4.6",
