--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -36,6 +36,7 @@
     "nuqs": "2.8.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-intersection-observer": "10.0.0",
     "sonner": "2.0.7",
     "tailwind-merge": "3.3.1",
     "tailwindcss": "4.1.17",
