--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -14,7 +14,9 @@
     "@radix-ui/react-checkbox": "1.3.3",
     "@radix-ui/react-dialog": "1.1.15",
     "@radix-ui/react-dropdown-menu": "2.1.16",
+    "@radix-ui/react-label": "2.1.8",
     "@radix-ui/react-popover": "1.1.15",
+    "@radix-ui/react-radio-group": "1.3.8",
     "@radix-ui/react-scroll-area": "1.2.10",
     "@radix-ui/react-slot": "1.2.3",
     "@radix-ui/react-tabs": "1.1.13",
@@ -40,6 +42,7 @@
     "sonner": "2.0.7",
     "tailwind-merge": "3.3.1",
     "tailwindcss": "4.1.17",
+    "vaul": "1.1.2",
     "zod": "4.1.13"
   },
   "devDependencies": {
