feat(spec-view): implement Gemini AI Provider adapter
Implement backend infrastructure for AI-powered test name conversion

- Integrate Gemini SDK (google.golang.org/genai v1.40.0)
- Add Circuit Breaker pattern to prevent cascade failures
- Implement in-memory Rate Limiter for API throttling
- Add exponential backoff retry logic (100ms, 200ms, 400ms)
- Create optimized prompt template supporting 24 languages

fix #185

--- a/src/backend/.env.example
+++ b/src/backend/.env.example
@@ -42,3 +42,9 @@ GITHUB_APP_WEBHOOK_SECRET=your-webhook-secret
 # Webhook Proxy (development only)
 # Create channel at: https://smee.io/new
 SMEE_URL=https://smee.io/your-channel-id
+
+# Google AI (Gemini)
+# Get API key at: https://aistudio.google.com/apikey
+GEMINI_API_KEY=your-gemini-api-key
+# Optional: Override default model (default: gemini-2.5-flash-lite)
+# GEMINI_MODEL=gemini-2.5-flash-lite
