refactor: update module path and references for repository rename
Updated all codebase references following GitHub repository rename from specvital/collector to specvital/worker.

- Changed Go module path: github.com/specvital/collector → github.com/specvital/worker
- Updated all Go import paths (24 files)
- Updated config files: devcontainer, package.json, .releaserc.js
- Updated docs: CLAUDE.md, README.md, CHANGELOG.md

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,15 +1,15 @@
 {
-  "name": "specvital-collector",
+  "name": "specvital-worker",
   "dockerComposeFile": "docker-compose.yml",
   "initializeCommand": "touch ${HOME}/.env.secrets",
   "service": "workspace",
-  "workspaceFolder": "/workspaces/specvital-collector",
+  "workspaceFolder": "/workspaces/specvital-worker",
   "features": {
     "ghcr.io/guiyomh/features/just:0": {},
     "./local-features/node": {},
     "./local-features/go": {}
   },
-  "postCreateCommand": "bash /workspaces/specvital-collector/.devcontainer/post-create.sh",
+  "postCreateCommand": "bash /workspaces/specvital-worker/.devcontainer/post-create.sh",
   "customizations": {
     "vscode": {
       "extensions": ["esbenp.prettier-vscode", "skellock.just"],
