--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # ============================================
-# specvital-collector Environment Variables
+# specvital-worker Environment Variables
 # ============================================
 # Copy this file to .env and fill in the values
 
