--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "specvital-collector",
+  "name": "specvital-worker",
   "version": "1.1.1",
-  "description": "A collector for SpecVital data",
+  "description": "Background job processing service for SpecVital",
   "repository": {
     "type": "git",
-    "url": "https://github.com/KubrickCode/specvital-collector.git"
+    "url": "https://github.com/specvital/worker.git"
   },
   "license": "MIT",
   "scripts": {
