--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-dropdown-menu": "2.1.16",
     "@radix-ui/react-label": "2.1.8",
     "@radix-ui/react-popover": "1.1.15",
+    "@radix-ui/react-progress": "1.1.8",
     "@radix-ui/react-radio-group": "1.3.8",
     "@radix-ui/react-scroll-area": "1.2.10",
     "@radix-ui/react-select": "2.2.6",
@@ -26,7 +27,7 @@
     "@radix-ui/react-tooltip": "1.2.8",
     "@tailwindcss/postcss": "4.1.17",
     "@tanstack/react-query": "5.62.16",
-    "@tanstack/react-virtual": "3.11.1",
+    "@tanstack/react-virtual": "3.13.6",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "cmdk": "1.1.1",
