chore: add air hot reload support for spec-generator
run-spec-generator used go run, requiring manual restart on code changes.
Added air support consistent with run-analyzer.

- Added .air.spec-generator.toml
- Updated justfile run-spec-generator to use air

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -188,6 +188,22 @@
         },
         {
           "color": "",
+          "command": "just run-spec-generator local",
+          "name": "spec-generator local",
+          "shortcut": "g",
+          "terminalName": "spec-generator local",
+          "useVsCodeApi": false
+        },
+        {
+          "color": "",
+          "command": "just run-spec-generator integration",
+          "name": "spec-generator integration",
+          "shortcut": "n",
+          "terminalName": "spec-generator integration",
+          "useVsCodeApi": false
+        },
+        {
+          "color": "",
           "command": "just run-scheduler local",
           "name": "scheduler local",
           "shortcut": "s",
