chore(spec-view): add run-spec-generator command for local development
After developing spec-view feature, the command to actually generate spec documents was missing.
Added spec-generator execution following the same pattern as run-analyzer for local development.
Also added VSCode action button for development convenience.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -227,6 +227,14 @@
         },
         {
           "color": "",
+          "command": "just run-spec-generator",
+          "name": "run-spec-generator",
+          "shortcut": "g",
+          "terminalName": "run-spec-generator",
+          "useVsCodeApi": false
+        },
+        {
+          "color": "",
           "executeAll": true,
           "name": "All Integration",
           "shortcut": "i",
