--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -57,6 +57,7 @@
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
     "@vitejs/plugin-react": "4.5.2",
+    "babel-plugin-react-compiler": "1.0.0",
     "eslint": "9.39.2",
     "eslint-import-resolver-typescript": "4.4.4",
     "eslint-plugin-import-x": "4.16.1",
