feat(e2e): set up Playwright-based E2E UI test infrastructure
Configure Playwright environment for frontend/backend integration testing.
Applied auth/no-auth test separation pattern from kubrickcode/loa-work repository.

- playwright.config.ts: 3 projects (setup, chromium, chromium-no-auth)
- e2e/auth.setup.ts: save auth state via dev-login endpoint
- webServer config for auto-starting backend(8000)/frontend(5173)
- add test-e2e commands to justfile

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,9 @@ docs/work
 .claude-sessions/
 src/backend/tmp
 *.tsbuildinfo
+
+# E2E Test
+test-results/
+playwright-report/
+e2e/.auth/user.json
+blob-report/
