--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "docs:preview": "vitepress preview docs"
   },
   "devDependencies": {
+    "@types/node": "25.0.9",
     "husky": "9.1.7",
     "lint-staged": "16.2.7",
     "prettier": "3.6.2",
