chore: add mock spec-generator run command
Support mock mode to avoid Gemini API costs during local UI development/testing.
Integrates with MOCK_MODE environment variable feature in worker repository.

- justfile: add run-mock-spec-generator command
- .vscode/settings.json: add mock-spec-generator button to Web group (shortcut: m)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -235,6 +235,14 @@
         },
         {
           "color": "",
+          "command": "just run-mock-spec-generator",
+          "name": "mock-spec-generator",
+          "shortcut": "m",
+          "terminalName": "mock-spec-generator",
+          "useVsCodeApi": false
+        },
+        {
+          "color": "",
           "executeAll": true,
           "name": "All Integration",
           "shortcut": "i",
