chore: change license from MIT to Apache 2.0
Changed licensing strategy to prevent fork rebranding and enable trademark protection.

- MIT has weak attribution requirements and no trademark provisions
- Apache 2.0 mandates attribution notices via NOTICE file in all distributions
- Explicitly prohibits trademark use without permission (Section 6)
- Requires modification notices to distinguish original from derivatives

Changes:
- LICENSE: replaced with Apache 2.0 full text
- NOTICE: created with copyright and trademark policy
- README.md/ko.md: added license badge and trademark notice
- package.json: updated to "Apache-2.0"

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "type": "git",
     "url": "https://github.com/specvital/worker.git"
   },
-  "license": "MIT",
+  "license": "Apache-2.0",
   "scripts": {
     "prepare": "husky"
   },
