--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "type": "git",
     "url": "https://github.com/KubrickCode/specvital-web.git"
   },
-  "license": "MIT",
+  "license": "Apache-2.0",
   "scripts": {
     "prepare": "husky",
     "test:e2e": "playwright test",
