fix(detection): support vitest globals mode test file detection
Fix detection bug where test files using describe/test/it without vitest imports were not detected when vitest.config.ts has globals: true setting

Changes:
- Add HasJSTestPatterns() function (detect describe/test/it/beforeEach patterns)
- Add test pattern validation in detectFromScope() for globals mode scopes
- Fix vitest config parsing to exclude include/exclude from projects array

Test results (Vue.js):
- Detected files: 105 → 200 (+90%)
- Detected tests: 2,349 → 3,329 (+42%)
- Delta from ground truth: 34.3% → 6.9%

fix #116

--- a/tests/integration/repos.yaml
+++ b/tests/integration/repos.yaml
@@ -62,6 +62,13 @@ repositories:
     frameworks:
       - vitest
 
+  - name: vue
+    url: https://github.com/vuejs/core
+    ref: v3.5.27
+    frameworks:
+      - vitest
+    complex: true
+
   - name: playwright
     url: https://github.com/microsoft/playwright
     ref: v1.49.0
@@ -145,6 +152,7 @@ repositories:
     ref: 6.9.0
     frameworks:
       - jest
+      - mocha
       - vitest
     complex: true
     nondeterministic: true
