test(integration): add zod repository to integration tests
Added colinhacks/zod repository for parser validation.
Set nondeterministic flag due to heavy use of dynamic test patterns (for...of + test()).

- 160 files, 1,722 tests detected
- Uses vitest framework

--- a/tests/integration/repos.yaml
+++ b/tests/integration/repos.yaml
@@ -56,6 +56,13 @@ repositories:
     frameworks:
       - vitest
 
+  - name: zod
+    url: https://github.com/colinhacks/zod
+    ref: main
+    frameworks:
+      - vitest
+    nondeterministic: true
+
   - name: baedal
     url: https://github.com/KubrickCode/baedal
     ref: v1.3.1
