--- a/tests/integration/repos.yaml
+++ b/tests/integration/repos.yaml
@@ -131,6 +131,7 @@ repositories:
     frameworks:
       - cargo-test
       - jest
+      - playwright
       - vitest
     complex: true
 
@@ -141,6 +142,7 @@ repositories:
       - cypress
       - go-testing
       - jest
+      - mocha
       - playwright
     complex: true
     nondeterministic: true
@@ -277,6 +279,12 @@ repositories:
     frameworks:
       - mocha
     complex: true
+
+  - name: axios
+    url: https://github.com/axios/axios
+    ref: v1.9.0
+    frameworks:
+      - mocha
 
   - name: kotest
     url: https://github.com/kotest/kotest
