fix(parser): detect dynamic subtests in Go test parser
t.Run(variable, ...) patterns were completely ignored, causing table-driven test subtests to be counted as 0.
While JS parser counts same situation as 1 with "(dynamic)" placeholder, Go parser did not handle this, violating ADR-02 policy.

Added handling for identifier, selector_expression, call_expression, and binary_expression node types in extractSubtestName function to detect dynamic subtests as "(dynamic)".

--- a/tests/integration/repos.yaml
+++ b/tests/integration/repos.yaml
@@ -101,6 +101,12 @@ repositories:
     frameworks:
       - go-testing
 
+  - name: mux
+    url: https://github.com/gorilla/mux
+    ref: v1.8.1
+    frameworks:
+      - go-testing
+
   - name: specvital-worker
     url: https://github.com/specvital/worker
     ref: v1.0.6
