test(integration): add echo repository to integration tests
Add labstack/echo v5.0.0 repository

- Popular Go web framework for go-testing parser validation
- 46 test files, 618 tests detected
- Validates t.Run subtest detection in go-testing parser

--- a/tests/integration/repos.yaml
+++ b/tests/integration/repos.yaml
@@ -107,6 +107,12 @@ repositories:
     frameworks:
       - go-testing
 
+  - name: echo
+    url: https://github.com/labstack/echo
+    ref: v5.0.0
+    frameworks:
+      - go-testing
+
   - name: specvital-worker
     url: https://github.com/specvital/worker
     ref: v1.0.6
