test(integration): add gson repository
Add Google Gson library to integration test targets.
Mixed JUnit4/JUnit5 project for Java test parser validation.

--- a/tests/integration/repos.yaml
+++ b/tests/integration/repos.yaml
@@ -187,6 +187,13 @@ repositories:
     frameworks:
       - junit5
 
+  - name: gson
+    url: https://github.com/google/gson
+    ref: gson-parent-2.13.2
+    frameworks:
+      - junit4
+      - junit5
+
   - name: fluentassertions
     url: https://github.com/fluentassertions/fluentassertions
     ref: 8.3.0
