--- a/tests/integration/repos.yaml
+++ b/tests/integration/repos.yaml
@@ -25,6 +25,13 @@ repositories:
     frameworks:
       - pytest
 
+  - name: faker
+    url: https://github.com/joke2k/faker
+    ref: v40.1.2
+    frameworks:
+      - pytest
+      - unittest
+
   - name: python-unittest-tutorial
     url: https://github.com/cgoldberg/python-unittest-tutorial
     ref: master
