--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -33,6 +33,7 @@
     "clsx": "2.1.1",
     "cmdk": "1.1.1",
     "es-toolkit": "1.43.0",
+    "fuse.js": "7.1.0",
     "lucide-react": "0.513.0",
     "motion": "12.23.26",
     "next": "16.0.7",
