--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -47,7 +47,8 @@
     "tailwind-merge": "3.3.1",
     "tailwindcss": "4.1.17",
     "vaul": "1.1.2",
-    "zod": "4.1.13"
+    "zod": "4.1.13",
+    "zustand": "5.0.10"
   },
   "devDependencies": {
     "@eslint/js": "9.39.2",
