test(queue): add integration tests for fairness middleware
Added integration tests and environment variable documentation for production readiness

- Implemented 6 integration test scenarios (per-tier limits, race conditions, mixed tier scenarios)
- Added fairness configuration documentation with 8 environment variables in .env.example
- Verified concurrency safety with race detector

--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,20 @@ ENCRYPTION_KEY=
 # These are typically injected by the platform
 
 # DATABASE_URL=postgres://user:password@postgres.railway.internal:5432/railway
+
+# --------------------------------------------
+# Fairness Configuration
+# --------------------------------------------
+# Per-user concurrent job limits and snooze parameters
+
+# Enable/disable fairness control (default: true)
+FAIRNESS_ENABLED=true
+
+# Per-tier concurrent job limits
+FAIRNESS_FREE_LIMIT=1          # Free tier users (default: 1)
+FAIRNESS_PRO_LIMIT=3           # Pro/ProPlus tier users (default: 3)
+FAIRNESS_ENTERPRISE_LIMIT=5    # Enterprise tier users (default: 5)
+
+# Snooze parameters when limit exceeded
+FAIRNESS_SNOOZE_DURATION=30s   # Base delay before retry (default: 30s)
+FAIRNESS_SNOOZE_JITTER=10s     # Random jitter (0~10s) to prevent thundering herd (default: 10s)
