--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -68,7 +68,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        service: [analyzer, spec-generator]
+        service: [analyzer, spec-generator, retention-cleanup]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
